# ai_youtube_quiz_generator

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .buildpacks  .gitignore  build.sh  main.py  middleware.py  pyproject.toml
frontend/: .env.production  .eslintrc.json  .gitignore  package-lock.json  package.json  tailwind.config.ts  types.ts
frontend/app/: actions.ts  layout.tsx  page.tsx
frontend/components/ui/: button.tsx  radio-group.tsx
